[package]
name = "actix-examples-oauth-github"
description = "Sample app demonstrating GitHub OAuth login using Actix Web"
authors = ["Rob Ede <robjtede@icloud.com>"]
edition = "2021"

[package.metadata.cargo-machete]
ignored = [
  "tokio", # macros used by shuttle runtime
]

[dependencies]
actix-web = "4.12"
maud = { version = "0.27", features = ["actix-web"] }
octocrab = "0.47"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuttle-actix-web = "0.57"
shuttle-runtime = "0.57"
tokio = "1.49"
tracing = "0.1.44"
