[package]
name = "actix-examples-oauth-github"
description = "Sample app demonstrating GitHub OAuth login using Actix Web"
authors = ["Rob Ede <robjtede@icloud.com>"]
edition = "2024"

[dependencies]
actix-web = "4.13"
confik = { version = "0.15.1", default-features = false, features = ["env", "secrecy"] }
maud = { version = "0.27", features = ["actix-web"] }
octocrab = "0.47"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
